@@ -70,8 +70,9 @@ class News_Balo(object):
         self.m_url = None
         self.m_quote = None
         self.m_baseurl = "balo.journal-officiel.gouv.fr"
-        self.m_connection=ITradeConnection(cookies=None, 
-                                           proxy=itrade_config.proxyHostname, 
+
+        self.m_connection = ITradeConnection(cookies=None,
+                                           proxy=itrade_config.proxyHostname,
                                            proxyAuth=itrade_config.proxyAuthentication)
 
     # ---[ protected interface ] ---
